# sshmngr

./: .gitignore  CLAUDE.md  PATCH_NOTES.md  README.md  config.ini  hosts.csv  hosts.csv.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
completions/: sshmngr.bash
examples/: config.ini  connections.csv
extras/: bash_completion.sh
sshmngr/: __init__.py  sshmngr.py
