[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sshmngr"
version = "0.8.2"
description = "SSH connection helper with jumphost support."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "silveX89" }]
dependencies = [
  "prompt_toolkit>=3.0.43",
  "rich>=13.0",
]

[project.scripts]
sshmngr = "sshmngr.sshmngr:main"

[tool.setuptools.packages.find]
include = ["sshmngr*"]
exclude = ["completions*", "examples*", "tests*"]
